# Tarea3-SBOMs

./: .gitignore  Analisis.ipynb  MANIFEST.in  README.md  WELCOME.md  index.html  index.html.md  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml  test.yaml
ciberseguridad_2026/: _modidx.py  core.py
data/: repos.json
data/results/: claude-code-action-codeql.json  claude-code-action-grype-raw.json  claude-code-action-grype.json  claude-code-action-sbom.json  claude-code-action.json  claude-code-action_temp.sarif  codesigning.guide-sbom.json  docker-sbom.json  docs-grype-raw.json  docs-grype.json  docs-sbom.json  docs_temp.sarif  fastlane-grype-raw.json  fastlane-grype.json  fastlane-sbom.json  fastlane-sirp-grype-raw.json  fastlane-sirp-grype.json  opencode.json  (+23 more)
nbs/: _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml  tufte.css
sbom/: SBOMS_en_la_actualidad.html  explicacion_script_sbom.html  generacion_sbom.html  generacion_sbom.html.md  introduccion_sboms.html  preguntas.html
scripts/: add_submodules.py  generate_codeql.py  generate_grype.py  generate_repo_list.py  generate_sboms.py
vuln/: Uso_de_IA_para__gestionar_vulnerabilidades.html  caso_litellm.html  explicacion_script_codeql.html  explicacion_script_grype.html  generacion_codeql.html  generacion_codeql.html.md  generacion_grype.html  generacion_grype.html.md  introduccion_sboms.html  introduccion_vulnerabilidades-commonmark.md  introduccion_vulnerabilidades.html  preguntas.html  taxonomia_vulnerabilidades.html
(+15 files in other folders)
